# mcp_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml  release.yml
docs/: README.md  architecture-decisions.md  data-integrity-audit.md  playmcp-guidelines.md  product-concept.md  rental-eligibility-plan.md  rental-policy-spec.md  result-refinement-audit.md  subscription-policy-spec.md
src/kakao_rent_mcp/: server.py
src/kakao_rent_mcp/tools/: eligibility.py
src/kr_housing_mcp/: __init__.py  models.py  server.py
src/kr_housing_mcp/clients/: lh.py  odcloud.py
src/kr_housing_mcp/config/: eligibility_rules.yaml
src/kr_housing_mcp/tools/: competition.py  eligibility.py  notices.py  recommend.py
src/slug_mcp/: engine.py  models.py  rental_engine.py  rules.py  scoring.py  server.py  store.py
src/slug_mcp/clients/: lh.py  odcloud.py
src/slug_mcp/config/: eligibility_rules.yaml  rental_rules.yaml
src/slug_mcp/tools/: _errors.py  _projection.py  analyze.py  competition.py  eligibility.py  lh_lease.py  notices.py  profile.py  recommend.py  rental_analyze.py
tests/: conftest.py  test_analyze_tool.py  test_competition.py  test_eligibility.py  test_engine.py  test_errors.py  test_lh_lease.py  test_notices.py  test_odcloud.py  test_profile_tools.py  test_recommend.py  test_rental_engine.py  test_rental_profile.py  test_scoring.py  test_server.py  test_store.py
tests/fixtures/: apt_lttot_pblanc_cmpet.json  apt_lttot_pblanc_detail.json  apt_lttot_pblanc_mdl.json  apt_lttot_pblanc_score.json  apt_lttot_pblanc_score_empty.json  apt_spsply_reqst_stus.json  lh_lease_notice_detail.json  lh_lease_notice_list.json
