[project]
name = "slug-mcp"
version = "0.1.0"
description = "한국 주택 청약 공고를 조회하고, 사용자의 소득·자산·가족구성·청약통장 정보로 자격·가점을 판정해 당첨 가능성이 높은 공고를 추천하는 MCP 서버"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
slug-mcp = "slug_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slug_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
